fix: service section text color and spacing

--- a/src/assets/less/root.less
+++ b/src/assets/less/root.less
@@ -1386,7 +1386,7 @@
 <--- -------------------------- -*/
 @sectionPadding: var(--sectionPadding);
 @cardRounded: var(--cardRounded);
-@bodytextcolorwhite: var(--bodytextcolorwhite);
+@bodytextcolorwhite: var(--bodyTextColorWhite);
 @primary: var(--primary);
 @dark: var(--dark);
 
